nginx/pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod
  namespace: nginx
spec: 
 containers:
 - name: nginx-cont
   image: nginx:latest
   ports:
   - containerPort: 80
