nginx/service.yaml
kind: Service
apiVersion: v1
metadata: 
  name: nginx-server
  namespace: nginx

spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
